--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: FORREPLACE1235-secret
-  namespace: FORREPLACE1235
+  name: cdscdscvfvfv12345-secret
+  namespace: cdscdscvfvfv12345
 type: Opaque
 data:
   rootpassword: ${{secret.ROOTPASSWORD}} | base64
